tests/aster/x/mochi/rosetta/determine-if-a-string-has-all-unique-characters.error
error[A024]: unknown function substring
  --> /workspace/mochi/tests/rosetta/x/Mochi/determine-if-a-string-has-all-unique-characters.mochi:46:20

 46 |           let ch = substring(s, i, i+1)
    |                    ^

help:
  Declare substring before use
